--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon app.js"
-    
+    "dev": "nodemon app.js"
   },
   "author": "Avi",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
 }
